--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,36 +1,5 @@
-<style>
-    a:link,
-    a:visited
-    {
-        color: #0398CA;
-    }
 
-    span#zf-name
-    {
-        color: #91BE3F;
-    }
-
-    div#welcome
-    {
-        color: #FFFFFF;
-        background-color: #0398CA;
-        width:  100%;
-        height: 100%;
-        border: 2px solid #444444;
-        overflow: hidden;
-        text-align: center;
-    }
-
-    div#more-information
-    {
-        background-image: url(http://framework.zend.com/images/bkg_body-bottom.gif);
-        height: 100%;
-    }
-    .email-input{
-        border-radius: 10px;
-    }
-</style>
-<div id="welcome">
+<div id="welcome"   class="col-md-4 col-md-offset-4 well">
 <?= $this->form;
  ?>
 </div>
