--- a/application/views/scripts/test/useradd.phtml
+++ b/application/views/scripts/test/useradd.phtml
@@ -1,4 +1,4 @@
-
+<?php $this->placeholder('menu')->set('3') ?>
 <div class="well col-lg-4 col-md-offset-4">
     <h3>Добавление пользователя</h3>
 <form class="form-horizontal" action="/test/add">
@@ -21,3 +21,5 @@
     </div>
 </form>
 </div>
+
+
